fixed navbar on small screens

--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -180,6 +180,71 @@ img {
 	font-size: 4rem;
 }
 
+//!   Showcase Styles
+
+.showcase {
+	height: 400px;
+	background-color: var(--primary-color);
+	color: #fff;
+	position: relative;
+
+	h1 {
+		font-size: 40px;
+	}
+
+	p {
+		margin: 20px 0;
+	}
+
+	.grid {
+		grid-template-columns: 55% 45%;
+		gap: 30px;
+		overflow: visible;
+	}
+}
+
+// .showcase::before,
+// .showcase::after {
+// 	content: '';
+// 	position: absolute;
+// 	height: 100px;
+// 	bottom: -70px;
+// 	left: 0;
+// 	right: 0;
+// 	background: #fff;
+// 	transform: skewY(-3deg);
+// 	-webkit-transform: skewY(-3deg);
+// 	-moz-transform: skewY(-3deg);
+// 	-ms-transform: skewY(-3deg);
+// }
+
+.showcase-form {
+	height: 350px;
+	width: 400px;
+	padding: 40px;
+
+	input:focus {
+		outline: none;
+	}
+
+	.form-control {
+		margin: 30px 0;
+	}
+
+	input[type='text'],
+	input[type='email'] {
+		border: 0;
+		border-bottom: 1px solid #b4becb;
+		width: 100%;
+		padding: 3px;
+		font-size: irem;
+	}
+}
+
+.computer_pic {
+	border-radius: 10px;
+}
+
 //!   Stats Styles
 .stats {
 	padding-top: 100px;
@@ -281,7 +346,7 @@ img {
 	padding: 4rem;
 }
 
-//!   CLI Styles
+//!		CLI Styles
 .cli .grid {
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: repeat(2, 1fr);
@@ -292,12 +357,12 @@ img {
 	grid-row: 1 / span 2;
 }
 
-//! Cloud Styles
+//!		Cloud Styles
 .cloud .grid {
 	grid-template-columns: 4fr 3fr;
 }
 
-//!   Languages
+//!		Languages
 .languages .card {
 	text-align: center;
 	margin: 18px 10px 40px;
@@ -317,4 +382,24 @@ img {
 	flex-wrap: wrap;
 }
 
-@import './showcase_styles';
+//!		Footer Styles
+.footer .social a {
+	margin: 0 10px;
+}
+
+@media (max-width: 768px) {
+}
+@media (max-width: 500px) {
+	.navbar {
+		height: 90px;
+	}
+
+	.navbar .flex {
+		flex-direction: column;
+	}
+
+	.navbar ul {
+		height: 25px;
+		background-color: rgba(0, 0, 0, 0.1);
+	}
+}
